# pim

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  ceiling.json  clean  compile  floor.json  generate  generate.bat  imgui.ini  run  run.bat  run.sh
src/: CMakeLists.txt  main.c  main.cpp  platform.h  sokol_app.c  sokol_app_gfx.c  sokol_audio.c  sokol_backend.h  sokol_gfx.c  sokol_time.c  systems.cpp  systems.h
src/allocator/: allocator.c  allocator.cpp  allocator.h  allocator_vtable.h  allocators.h  arena.c  arena.h  base_allocator.h  header.h  iallocator.h  leak_tracker.h  linear_allocator.h  pool_allocator.h  stack_allocator.h  stdlib_allocator.h  tlsf_allocator.cpp  tlsf_allocator.h
src/assets/: asset_system.c  asset_system.cpp  asset_system.h  assetdb.cpp  assetdb.h  crate.c  crate.h  file_streaming.cpp  file_streaming.h  packdb.cpp  packdb.h  stream_file.cpp  stream_file.h  vfile.c  vfile.h
src/audio/: audio_system.c  audio_system.cpp  audio_system.h  audio_system.hpp  components.h  midi_system.c  midi_system.h  synth_system.cpp  synth_system.hpp
src/cgltf/: cgltf.c  cgltf_write.c
src/common/: allocator.cpp  allocator.h  apply.h  array.h  atomics.cpp  atomics.h  bitutil.h  chunk_allocator.cpp  chunk_allocator.h  cmd.c  cmd.h  cmp.h  comparator.h  comparator_util.h  compiletimehash.hpp  console.c  console.h  ctrl_enums.h  cvar.c  cvar.cpp  cvar.h  cvars.c  cvars.h  dbytes.h  dict.h  find.c  find.h  fnv1a.c  fnv1a.h  fs.h  fs_win32.cpp  guid.c  guid.cpp  guid.h  guid_util.h  hash.h  hashstring.cpp  hashstring.h  heap_item.h  i_common.c  (+62 more)
src/components/: all.h  chunk.h  common.h  compflag.c  compflag.h  component.cpp  component.h  component_id.h  component_mgr.cpp  component_mgr.h  component_row.h  components.h  cubemaps.c  cubemaps.h  drawables.c  drawables.h  ecs.c  ecs.cpp  ecs.h  entity.cpp  entity.h  entity_system.cpp  entity_system.h  resources.cpp  resources.h  system.cpp  system.h  table.c  table.h  taskgraph.cpp  taskgraph.h  transform.cpp  transform.h
src/containers/: array.h  array.hpp  array_view.h  atomic_array.h  bitfield.h  bitpack.h  carray.c  carray.h  carray_fn.h  dict.c  dict.h  dict.hpp  gen_id.h  gen_id.hpp  generational.h  genid.h  graph.c  graph.h  hash.hpp  hash128.hpp  hash32.hpp  hash64.hpp  hash_dict.h  hash_set.c  hash_set.h  hash_util.h  heap.h  id_alloc.hpp  idalloc.c  idalloc.h  idset.c  idset.h  idtable.c  idtable.h  initlist.h  int_queue.c  int_queue.h  lookup.c  lookup.h  lookup_table.h  (+30 more)
src/editor/: console.c  editor.c  editor.h  menubar.c  menubar.cpp  menubar.h
src/geometry/: distance.h  types.h
src/input/: input_system.c  input_system.cpp  input_system.h
src/interface/: i_cdaudio.h  i_chase.c  i_chase.h  i_client.h  i_cmd.h  i_common.c  i_common.h  i_console.h  i_crc.h  i_cvar.c  i_cvar.h  i_cvars.c  i_cvars.h  i_defines.h  i_draw.h  i_gl.h  i_globals.c  i_globals.h  i_glquake.h  i_host.c  i_host.h  i_host_cmd.c  i_host_cmd.h  i_input.h  i_keys.h  i_link.c  i_link.h  i_mathlib.h  i_menu.h  i_model.h  i_msg.c  i_msg.h  i_net.h  i_progs.c  i_progs.h  i_render.h  i_sbar.h  i_screen.h  i_server.h  i_sizebuf.c  (+11 more)
src/io/: dir.c  dir.h  env.c  env.h  fd.c  fd.h  fmap.c  fmap.h  fnd.c  fnd.h  fstr.c  fstr.h  types.h
src/logic/: camera_logic.c  camera_logic.h  logic.c  logic.h  progs.c  progs.h
src/math/: ambcube.c  ambcube.h  area.h  atmosphere.c  atmosphere.h  atomic_float.h  blending.h  bool_funcs.h  box.h  color.c  color.h  color_gen.h  cubic_fit.c  cubic_fit.h  dist1d.c  dist1d.h  f32_funcs.h  float2.h  float2_funcs.h  float3.h  float3.hpp  float3_funcs.h  float3x3_funcs.h  float4.h  float4.hpp  float4_funcs.h  float4x4.h  float4x4_funcs.h  frustum.h  grid.h  int2.h  int2_funcs.h  int3.h  int3_funcs.h  int4.h  int4_funcs.h  lighting.c  lighting.h  markov_sampler.c  markov_sampler.h  (+23 more)
src/os/: atomic_funcs.h  atomic_types.h  atomics.cpp  atomics.h  fs.h  fs_win32.cpp  mman.c  mman.h  socket.c  socket.cpp  socket.h  socket_win32.cpp  thread.cpp  thread.h  thread_win32.cpp
src/physics/: components.h
src/quake/: bsp.h  bspfile.h  packfile.c  packfile.cpp  packfile.h  q_bspfile.h  q_model.c  q_model.h  q_packfile.c  q_packfile.h
src/rendering/: camera.c  camera.h  clear_tile.c  clear_tile.h  cmd.c  cmd.h  components.h  constants.c  constants.h  cubemap.c  cubemap.h  denoise.c  denoise.h  drawable.c  drawable.h  exposure.c  exposure.h  fragment_stage.c  fragment_stage.h  framebuffer.c  framebuffer.h  gi_grid.c  gi_grid.h  gltf_model.c  gltf_model.h  librtc.c  librtc.h  lightmap.c  lightmap.h  lights.c  lights.h  material.c  material.cpp  material.h  mesh.c  mesh.cpp  mesh.h  mipmap.c  mipmap.h  model.c  (+41 more)
src/script/: hello.lua  script.c  script.h
src/scriptsys/: cmds.c  cmds.h  lib_cmd.c  lib_cmd.h  lib_game.c  lib_game.h  lib_log.c  lib_log.h  lib_time.c  lib_time.h  scr_cmd.c  scr_cmd.h  scr_cvar.c  scr_cvar.h  scr_game.c  scr_game.h  scr_log.c  scr_log.h  scr_math.c  scr_math.h  scr_time.c  scr_time.h  scr_util.c  scr_util.h  script.c  script.h
src/shaders/: AdaptHistogram.hlsl  BuildHistogram.hlsl  ClearHistogram.hlsl  Color.hlsl  DepthOnly.hlsl  Exposure.hlsl  GI.hlsl  Lighting.hlsl  Macro.hlsl  RetroSky.hlsl  SG.hlsl  Sampling.hlsl  TextureTable.hlsl  bindings.hlsl  brush.hlsl  color_gen.h  common.hlsl  example_input.hlsl  example_vs.hlsl  first_cbuffer.hlsl  first_mesh.hlsl  first_tri.hlsl  imgui.hlsl  post.hlsl  quat.hlsl  random.hlsl  screenblit.hlsl  transforms.hlsl
src/sokol/: sokol_app.c  sokol_audio.c  sokol_backend.h  sokol_gfx.h  sokol_gl.c  sokol_imgui.c  sokol_imgui.cpp  sokol_time.c
src/stb/: stb_image.c  stb_image_write.c  stb_perlin.c  stb_perlin_fork.c  stb_perlin_fork.h  stb_sprintf.c
src/systems/: audio_system.c  audio_system.cpp  audio_system.h  ctrl_system.c  ctrl_system.cpp  ctrl_system.h  ecs.cpp  ecs.h  entity_system.c  entity_system.cpp  entity_system.h  input_system.cpp  input_system.h  render_system.c  render_system.cpp  render_system.h  systems.c  systems.cpp  systems.h  task_system.cpp  task_system.h  time_system.c  time_system.cpp  (+1 more)
(+256 files in other folders)
